# FlipBits

./: .gitignore  CMakeLists.txt  NOTICE  README.md  README_en.md  build.gradle.kts  gradle.properties  index.html  settings.gradle.kts
.agent/: AGENTS.md
.agent/guides/git/: ci-message-styles.md  git-message-styles.md  git-tag-styles.md
.agent/guides/github/: CHANGELOGS.md  ci-message-styles.md  release-note-styles.md
.agent/workflow/git/: commit-message-workflow.md
.agent/workflows/docs/: history-style-guide.md  tools-history-style-guide.md
.github/: docs.md
.github/workflows/: ci-android-assemble.yml  ci-android-quality.yml  ci-host-verify.yml  deploy-pages-demo.yml
Test/: CMakeLists.txt
Test/api/: api_tests.cpp
Test/artifact/: artifact_tests.cpp
Test/cli/: cli_smoke_tests.cpp
Test/e2e/: e2e_tests.cpp
Test/include/: test_audio_io.h  test_framework.h  test_fs.h  test_process.h  test_std_support.h  test_vectors.h
Test/modules/: end_to_end_module_smoke.cpp  facade_pipeline_smoke.cpp  foundation_module_smoke.cpp  leaf_module_smoke.cpp  leaf_module_smoke_flash.cpp  leaf_module_smoke_support.cpp  leaf_module_smoke_support.h  leaf_module_smoke_transport.cpp  leaf_module_smoke_voice.cpp  mid_layer_module_smoke.cpp  phase2_leaf_smoke.cpp
Test/runtime/: runtime_tests.cpp
Test/unit/: unit_tests.cpp
Test/voicing/: flash_voicing_formal_tests.cpp  flash_voicing_payload_tests.cpp  flash_voicing_shell_tests.cpp  flash_voicing_test_support.cpp  flash_voicing_test_support.h  flash_voicing_tests.cpp
apps/audio_android/: AGENTS.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
apps/audio_android/app/src/main/cpp/: CMakeLists.txt  audio_io_jni.cpp  audio_io_jni_dto_marshalling_impl.inc  audio_io_jni_entrypoints_impl.inc  audio_io_jni_enum_lookup_impl.inc  jni_bridge.cpp  jni_bridge_encode.cpp  jni_bridge_follow_entries.cpp  jni_bridge_follow_hydration.cpp  jni_bridge_follow_marshalling.cpp  jni_bridge_helpers.cpp  jni_bridge_internal.h  jni_bridge_lifecycle.cpp  jni_bridge_voice.cpp  playback_runtime_jni.cpp
apps/audio_android/modules_smoke/: CMakeLists.txt  android_modules_smoke.cpp
apps/audio_android/native_package/src/: CMakeLists.txt  audio_core_flash_phy_clean.cpp  audio_core_flash_phy_rules.cpp  audio_core_flash_signal.cpp  audio_core_flash_visualization.cpp  audio_core_flash_voicing.cpp  audio_core_mini_codec.cpp  audio_core_mini_phy_clean.cpp  audio_core_pro_phy_clean.cpp  audio_core_transport_encode_operation.cpp  audio_core_transport_encode_operation_steps.cpp  audio_core_transport_encode_work_plan.cpp  audio_core_transport_follow.cpp  audio_core_transport_transport.cpp  audio_core_ultra_phy_clean.cpp  audio_core_voice_fx.cpp  audio_io_backend_android.cpp  audio_io_package.cpp  audio_runtime_package.cpp  bag_api_package.cpp
apps/audio_cli/: AGENTS.md  README.md
apps/audio_cli/rust/cmake/: CMakeLists.txt
apps/audio_cli/windows/cmake/: CMakeLists.txt  third_party.cmake
apps/audio_web/: AGENTS.md  CMakeLists.txt  README.md
apps/audio_web/docs/: i18n-style-guide.md
apps/audio_web/site/: index.html  styles.css
apps/audio_web/site/data/: sample-texts.json
apps/audio_web/site/js/: app-controller.js  app.js  audio-utils.js  browser-locale.js  constants.js  dom.js  encode-worker.js  encoder-client.js  i18n.js  input-policy.js  perf-diagnostics.js  request-form.js  result-formatters.js  result-summary-view-model.js  sample-controller.js  sample-text-service.js  sample-view.js  ui-controller.js
apps/audio_web/site/js/i18n/: de.js  en.js  es.js  fr.js  it.js  ja.js  ko.js  la.js  pl.js  pt-rBR.js  ru.js  uk.js  zh-CN.js  zh-rTW.js
apps/audio_web/site/wasm/: flipbits_web.js
apps/audio_web/src/: flipbits_web_bridge.cpp
apps/audio_web/tools/: build_wasm.py  export_sample_texts.py  prepare_pages_site.py  serve_site.py
cmake/: flipbits_core_version.cmake  flipbits_test_helpers.cmake  flipbits_toolchain_capabilities.cmake  wavebits_core_version.cmake
docs/: README.md  core.md  future.md  presentation.md  testing.md
docs/TODO/: android-mini-cw-playback-speed-click.md  windows_distribution_minimum_plan.md
docs/architecture/: README.md  android-app-architecture.md  android-native-strategy.md  compatibility-layer-inventory.md  encode-operation-contract.md  module-topology.md  repo-map.md  text-follow-contract.md
docs/core/: v0.1.0.md  v0.1.1.md  v0.3.1.md
docs/design/: README.md  flash-voicing-emotions.md  transports.md
docs/legal/: TRADEMARKS.md  cli_third_party_inventory.md  cli_third_party_notices.md
docs/notes/: build-commands.md  history-workflow.md  message-workflow.md  toolchain-capabilities.md  toolchain-capability-regression-checklist.md
docs/postmortems/: 2026-05-07.md
docs/tools/: README.md  ci-workflow.md
libs/: AGENTS.md  README.md
libs/audio_api/: CMakeLists.txt
libs/audio_core/: CMakeLists.txt
libs/audio_io/: CMakeLists.txt
libs/audio_io/include/: audio_io_api.h  wav_io.h
libs/audio_io/modules/audio_io/: wav.cppm  wav_impl.cpp  wav_metadata_parse.cppm
libs/audio_io/src/: audio_io_api.cpp  audio_io_api_entrypoints_impl.inc  audio_io_api_lifecycle_impl.inc  audio_io_api_metadata_marshalling_impl.inc  audio_io_api_status_messages_impl.inc  wav_io.cpp  wav_io_backend.cpp  wav_io_backend.h  wav_io_bytes_impl.inc  wav_metadata_parse_rules.cpp  wav_metadata_parse_rules.h
libs/audio_io/tests/: unit_tests.cpp
libs/audio_runtime/: CMakeLists.txt
temp/: format_flash_visual_perf.py
tools/: README.md  build.toml  build_android.py  requirements.txt
tools/repo_tooling/: android_install.py  android_jni_keep_check.py  android_sdk.py  android_signing.py  constants.py
tools/tests/: test_android_command.py  test_android_debug.py  test_android_translate_flow.py  test_android_translate_units.py  test_flash_speed_analysis.py  test_history_prep.py  test_host_build_tools.py  test_loc_config.py  test_message_prep.py  test_web_tools.py
tools/wavebits_tools/: cli.py  constants.py  paths.py
tools/web/: package-lock.json  package.json  playwright.config.js
ui/svg/: README.md
(+1613 files in other folders)
